# paper-processor

./: .gitignore  README.md  paper_processor.py  setup_paper_processor.sh
docs/diagrams/: 02_per_paper_flow.dot  03_model_routing.dot
docs/sessions/: 2026-05-02_gpt-oss-20b-eviction-investigation.md  2026-05-09T045435Z_install-lite-xl.md  2026-05-09T050501Z_install-mc-dracula-theme.md  2026-05-09T052330Z_debug-paper-processor-venv.md  2026-05-09T061117Z_openclaw-ollama-hookup.md  2026-05-09T065500Z_install-xtree-clones.md  2026-05-14T210926Z_fork-gptOSS-textonly.md  2026-05-15T235801Z.md
fork_2026-05-09T184929Z/: README.md  architecture.dot  paper_processor.py
fork_2026-05-09T184929Z/docs/: FUTURE_DIRECTIONS.md
fork_2026-05-09T184929Z/docs/sessions/: 2026-05-10_gpu_thermal_future_directions.dot  2026-05-10_gpu_thermal_future_directions.md  2026-05-10_gpu_thermal_howto.dot  2026-05-10_gpu_thermal_howto.md  2026-05-10_gpu_thermal_lessons_learned.dot  2026-05-10_gpu_thermal_lessons_learned.md  2026-05-10_gpu_thermal_management.md
fork_2026-05-09T184929Z/docs_2026-05-09T202645Z/: README.md  SAFETY_REVIEW.md
fork_2026-05-09T184929Z/sessions/: 2026-05-09T184929Z_fork-creation.md  2026-05-10T132822Z_dot-fix-codemodel-swap.md  2026-05-10T142503Z_fast-tier-diagram-retry.md  TEMPLATE.md
fork_2026-05-14T205304Z/: README.md  paper_processor.py
fork_2026-05-15T235801Z/: README.md  paper_processor.py
fork_gptOSS_textonly_2026-05-14T205304Z/: README.md  paper_processor.py
wizard/: Cargo.toml  README.md
wizard/src/: main.rs
(+13 files in other folders)
