[workspace]

[package]
name = "paper-wizard"
version = "0.1.0"
edition = "2021"
description = "Ratatui TUI wizard for the OpenClaw/Ollama paper_processor pipeline"

[[bin]]
name = "paper-wizard"
path = "src/main.rs"

[dependencies]
ratatui = "0.28"
crossterm = "0.28"
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
walkdir = "2"
ureq = { version = "2", features = ["json"] }

[profile.release]
lto = "thin"
strip = true
